--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,6 @@ body{
 .searchTerm {
   width: 100%;
   border: 3px solid #00B4CC;
-  
   padding: 5px;
   height: 20px;
   border-radius: 5px 0 0 5px;
@@ -57,7 +56,7 @@ body{
 <div class="wrap">
    <div class="search">
      <form action="word">
-      <input type="text" name="search" class="searchTerm" placeholder="Input Your Word Here">
+      <input type="text" name="search" class="searchTerm" placeholder="Type">
       <button type="submit" class="searchButton">
         <i class="fa fa-search"></i>
      </button>
